Flex-direction-column-edited

--- a/flex.html
+++ b/flex.html
@@ -7,9 +7,24 @@
     <link rel="stylesheet" href="flexbox.css" />
   </head>
   <body>
-    <div class="Container"></div>
-    <div class="child"></div>
-    <div class="child"></div>
-    <div class="child"></div>
+
+    <div class="container">
+    <ul class="child">flexbox layout
+      <li class="child">Menu</li>
+      <li class="child">dashboard</li>
+      <li class="child">menu</li>
+      <li class="child">users</li>
+      <li class="child">log out</li>
+      </ul>
+    </ul>
+    <br />
+    <br />
+    <ul class="Container">
+      Categories
+      <li class="child">design</li>
+      <li class="child">code</li>
+      <li class="child">marketing</li>
+   </div>
+    <br />
   </body>
 </html>
