--- a/flex.html
+++ b/flex.html
@@ -8,6 +8,13 @@
   </head>
   <body>
 
+    <h1 id="paris"> The Flex Direction </h1>
+   <header id="heady"">main Source
+  <ul class="kid">home</ul>
+  <ul class="kid">about</ul>
+  <ul class="kid">contact</ul>
+  </header>
+
     <div class="container">
     <ul class="child">flexbox layout
       <li class="child">Menu</li>
