added sticky as position

--- a/flex.html
+++ b/flex.html
@@ -9,11 +9,14 @@
   <body>
 
     <h1 id="paris"> The Flex Direction </h1>
-   <header id="heady"">main Source
+     <div class="stick">Click For more</div>
+   <header id="heady"" >
+
   <ul class="kid">home</ul>
   <ul class="kid">about</ul>
-  <ul class="kid">contact</ul>
+  <ul class="kid">contact</ul> 
   </header>
+    
 
     <div class="container">
     <ul class="child">flexbox layout
@@ -33,5 +36,14 @@
       <li class="child">marketing</li>
    </div>
     <br />
+<div class="end" >
+2025 My Website
+<ul id="shushu">Privact policy</ul>
+<ul id="shushu">Terms of Service</ul>
+<ul id="shushu">Support</ul>
+
+
+</div>
+
   </body>
 </html>
