--- a/flex.html
+++ b/flex.html
@@ -8,13 +8,15 @@
   </head>
   <body>
 
+    <section> 
     <h1 id="paris"> The Flex Direction </h1>
+    <span> Check our website platform.</span>
+</section>
      <div class="stick">Click For more</div>
    <header id="heady"" >
-
-  <ul class="kid">home</ul>
-  <ul class="kid">about</ul>
-  <ul class="kid">contact</ul> 
+  <ul class="kid one">home</ul>
+  <ul class="kid two">about</ul>
+  <ul class="kid three">contact</ul>
   </header>
     
 
@@ -36,13 +38,13 @@
       <li class="child">marketing</li>
    </div>
     <br />
+    
+
+    <h2 id="mid">My website</h2>
 <div class="end" >
-2025 My Website
 <ul id="shushu">Privact policy</ul>
 <ul id="shushu">Terms of Service</ul>
 <ul id="shushu">Support</ul>
-
-
 </div>
 
   </body>
