--- a/flex.html
+++ b/flex.html
@@ -8,10 +8,10 @@
   </head>
   <body>
 
-    <section> 
+    <nav> 
     <h1 id="paris"> The Flex Direction </h1>
     <span> Check our website platform.</span>
-</section>
+    </nav>
      <div class="stick">Click For more</div>
    <header id="heady"" >
   <ul class="kid one">home</ul>
